# eve-monitor-rs

./: .gitignore  .typos.toml  Cargo.toml  build.rs
.github/workflows/: pr.yaml
ipc-tests/: eve_ipc_message-0.json  eve_ipc_message-1.json  eve_ipc_message-101.json  eve_ipc_message-102.json  eve_ipc_message-103.json  eve_ipc_message-106.json  eve_ipc_message-107.json  eve_ipc_message-108.json  eve_ipc_message-109.json  eve_ipc_message-110.json  eve_ipc_message-111.json  eve_ipc_message-112.json  eve_ipc_message-113.json  eve_ipc_message-114.json  eve_ipc_message-115.json  eve_ipc_message-118.json  eve_ipc_message-15.json  eve_ipc_message-2.json  eve_ipc_message-20.json  eve_ipc_message-22.json  eve_ipc_message-23.json  eve_ipc_message-25.json  eve_ipc_message-26.json  eve_ipc_message-4.json  eve_ipc_message-40.json  eve_ipc_message-41.json  eve_ipc_message-43.json  eve_ipc_message-44.json  eve_ipc_message-45.json  eve_ipc_message-46.json  eve_ipc_message-5.json  eve_ipc_message-51.json  eve_ipc_message-53.json  eve_ipc_message-54.json  eve_ipc_message-55.json  eve_ipc_message-56.json  eve_ipc_message-57.json  eve_ipc_message-58.json  eve_ipc_message-59.json  eve_ipc_message-6.json  (+46 more)
src/: actions.rs  application.rs  dispatcher.rs  events.rs  lcs.rs  main.rs  mainwnd.rs  model.rs  raw_model.rs  terminal.rs  traits.rs
src/device/: device.rs  dmesg.rs  mod.rs  network.rs  summary.rs
src/diff/: lcs.rs  mod.rs  semantic.rs
src/efi/: device_path.rs  mod.rs  tests.rs  vars.rs
src/ipc/: eve_types.rs  ipc_client.rs  message.rs  mod.rs  tests.rs
src/model/: mod.rs  model.rs
src/tcg/: mod.rs  tcg_events.rs  tcg_tpmlog.rs  tests.rs
src/tpm/: diff.rs  events.rs  mod.rs  tcg_events.rs  tcg_tpmlog.rs  tests.rs  tpmlog.rs
src/ui/: action.rs  activity.rs  app_page.rs  button.rs  component.rs  dialog.rs  focus_tracker.rs  homepage.rs  input_dialog.rs  input_field.rs  ipdialog.rs  label.rs  layer_stack.rs  mainwnd.rs  message_box.rs  mod.rs  netconf.rs  networkpage.rs  statusbar.rs  summary_page.rs  tools.rs  traits.rs  ui.rs  vaultpage.rs  window.rs
test_data/ipc-tests/: eve_ipc_message-100.json  eve_ipc_message-104.json  eve_ipc_message-105.json  eve_ipc_message-116.json  eve_ipc_message-117.json  eve_ipc_message-14.json  eve_ipc_message-16.json  eve_ipc_message-17.json  eve_ipc_message-18.json  eve_ipc_message-38.json  eve_ipc_message-39.json  eve_ipc_message-41.json  eve_ipc_message-42.json  eve_ipc_message-43.json  eve_ipc_message-45.json  eve_ipc_message-47.json  eve_ipc_message-48.json  eve_ipc_message-52.json  eve_ipc_message-55.json  eve_ipc_message-60.json  (+14 more)
(+24 files in other folders)
