[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream", "use-dev-tty"] }
ratatui = { version = "0.27.0", features = ["unstable-widget-ref"] }
anyhow = "1.0.86"
chrono = "0.4.38"
pretty_env_logger = "0.5.0"
log = "0.4.22"
strum = "0.26.3"
# async
tokio = { version = "1.38.1", features = ["full"] }
futures = "0.3.30"
