[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream", "use-dev-tty"] }
ratatui = { version = "0.27.0", features = ["unstable-widget-ref"] }
anyhow = "1.0.86"
chrono = "0.4.38"
log = "0.4.22"
strum = "0.26.3"
async-inotify = "0.1.0"
inotify = "0.10.2"
log2 = "0.1.11"

# async
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
bytes = "1.6.0"

#serde
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
