[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization.

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream", "use-dev-tty"] }
ratatui = { version = "0.27.0", features = ["unstable-widget-ref"] }
anyhow = "1.0.86"
log = "0.4.22"
strum = "0.26.3"
async-inotify = "0.1.0"
inotify = "0.10.2"
log2 = "0.1.11"

# async
tokio = { version = "1.39.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
bytes = "1.6.1"

#serde
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
serde_with = { version = "3.11.0", features = ["base64"] }
format_serde_error = { version = "0.3.0", default-features = false, features = [
    "serde_json",
    "colored",
    "graphemes_support",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
macaddr = { version = "1.0.1", features = ["serde"] }
rmesg = "1.0.21"
base64 = "0.22.1"
url = "2.5.2"
indexmap = "2.2.6"
ipnet = { version = "2.10.1", features = ["serde", "json"] }
better-panic = "0.3.0"
color-eyre = "0.6.3"
human-panic = "2.0.2"
libc = "0.2.161"
strip-ansi-escapes = "0.2.0"
